[gd_scene load_steps=24 format=3 uid="uid://dvickpr5s8o5c"]

[ext_resource type="Script" path="res://core/games/main_menu/scripts/main_menu.gd" id="1_ekl7t"]
[ext_resource type="PackedScene" uid="uid://bh5syuqkjy7cu" path="res://core/miscs/day_night_cycle/scenes/day_night_cycle.tscn" id="2_nmtd3"]
[ext_resource type="PackedScene" uid="uid://bexwyjad7hq8q" path="res://core/actors/ships/scenes/drakkar.tscn" id="3_6jbsl"]
[ext_resource type="PackedScene" uid="uid://j6566m1k03xg" path="res://core/actors/characters/scenes/actor_character_player.tscn" id="4_c51cm"]
[ext_resource type="PackedScene" uid="uid://dj6ki6fw1q6yo" path="res://core/miscs/camera_rig/scenes/camera_rig.tscn" id="4_e50gy"]
[ext_resource type="PackedScene" uid="uid://cqtd17afj0s44" path="res://core/miscs/weather_control/scenes/weather_control.tscn" id="7_e27xs"]
[ext_resource type="PackedScene" uid="uid://w062iitol64h" path="res://core/miscs/ocean/scenes/water.tscn" id="8_3ew1o"]
[ext_resource type="PackedScene" uid="uid://bf77txe6s0t6r" path="res://core/miscs/weather/scenes/rain.tscn" id="8_f874g"]
[ext_resource type="PackedScene" uid="uid://bnpbxs21jgofd" path="res://core/miscs/weather/scenes/snow.tscn" id="9_bem8h"]
[ext_resource type="Environment" uid="uid://brd2qldg4r5mr" path="res://core/effects/resources/we_default.tres" id="9_lxvdx"]
[ext_resource type="PackedScene" uid="uid://8ay5rlrutcmx" path="res://addons/proton_scatter/demos/assets/large_rock.tscn" id="12_7jti2"]
[ext_resource type="Theme" uid="uid://b8j47gvu61s0d" path="res://assets/themes/default.tres" id="12_mvb4d"]
[ext_resource type="AudioStream" uid="uid://cn8csltq3ibk4" path="res://assets/sounds/natural-thunder.ogg" id="12_sq8o2"]
[ext_resource type="AudioStream" uid="uid://cadv3aij6g4jl" path="res://assets/sounds/wood_damage.wav" id="14_ivgsl"]
[ext_resource type="AudioStream" uid="uid://cv8aj3gvhtbyr" path="res://assets/sounds/ocean_waves_crisp.wav" id="15_e6ik7"]
[ext_resource type="Script" path="res://core/miscs/loaders/scripts/music_loader.gd" id="16_ivh46"]
[ext_resource type="AudioStream" uid="uid://bqg4breypqoc0" path="res://assets/musics/menu.ogg" id="17_h5cha"]
[ext_resource type="PackedScene" uid="uid://bhg6ek2wf3lsp" path="res://core/miscs/configuration/scenes/OptionsWindow.tscn" id="18_x708y"]

[sub_resource type="Animation" id="Animation_op4u4"]
resource_name = "idle"
length = 5.0
loop_mode = 1
tracks/0/type = "rotation_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, -0.026, 0, 0, 1, 2.6, 1, 0.026, 0, 0, 1)
tracks/1/type = "rotation_3d"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(1.3, 1, -0.009, 0, -0.017, 1, 4.2, 1, -0.009, 0, 0.017, 1)

[sub_resource type="Animation" id="Animation_ffu37"]
resource_name = "storm"
length = 5.0
loop_mode = 1
tracks/0/type = "rotation_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, -0.052, 0, 0, 0.999, 2.6, 1, 0.052, 0, 0, 0.999)
tracks/1/type = "rotation_3d"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(1.3, 1, -0.009, 0, -0.035, 0.999, 4.2, 1, -0.009, 0, 0.035, 0.999)

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ffj8v"]
_data = {
"idle": SubResource("Animation_op4u4"),
"storm": SubResource("Animation_ffu37")
}

[sub_resource type="Animation" id="Animation_j1jtn"]
resource_name = "start"
length = 15.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GUI:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WeatherControl:weather_index")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(2, 8.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.5, 1.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("DayNightCycle:time")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(2, 8.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.8, 1.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CameraRig:mode")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 7.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": ["TopView", "FPS"]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Drakkar/AnimationPlayer")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(6.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": ["storm", -1, 1.0, false],
"method": &"play"
}]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Water:height")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(2, 8.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [4.0, 5.8]
}
tracks/6/type = "method"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath(".")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(13.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"change_level"
}]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Cutscene/Thunder:playing")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(3),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/8/type = "position_3d"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Cutscene/Rock")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = PackedFloat32Array(2, 1, 0, 0, 92, 4.1, 1, 0, 6.437, 70, 13.7, 1, 0, 10, 7)
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Cutscene/DrakkarDamage:playing")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(13.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/10/type = "position_3d"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Water")
tracks/10/interp = 2
tracks/10/loop_wrap = true
tracks/10/keys = PackedFloat32Array(0, 1, 512, 5, 512, 4.1, 1, 512, 5, 490, 13.7, 1, 512, 5, 430)

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nvqa1"]
_data = {
"start": SubResource("Animation_j1jtn")
}

[node name="MainMenu" type="Node3D"]
script = ExtResource("1_ekl7t")
first_level_path = "res://core/games/main_game/scenes/main_game.tscn"

[node name="Water" parent="." instance=ExtResource("8_3ew1o")]

[node name="WaterEffect" type="AudioStreamPlayer" parent="Water"]
stream = ExtResource("15_e6ik7")
volume_db = -30.0
autoplay = true

[node name="Drakkar" parent="." instance=ExtResource("3_6jbsl")]
transform = Transform3D(0.999967, -0.00809418, -7.28476e-05, 0.00807946, 0.997519, 0.0699304, -0.000493362, -0.0699287, 0.997552, 0, 7, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Drakkar"]
libraries = {
"": SubResource("AnimationLibrary_ffj8v")
}
autoplay = "idle"

[node name="ActorCharacterPlayer" parent="." instance=ExtResource("4_c51cm")]
transform = Transform3D(-0.898089, 0, -0.439814, 0, 1, 0, 0.439814, 0, -0.898089, -1.4584, 8.92576, -4.57635)

[node name="CameraRig" parent="." instance=ExtResource("4_e50gy")]
transform = Transform3D(-0.999719, 0, -0.0237168, 0, 1, 0, 0.0237168, 0, -0.999719, 0, 24, -24.3915)
spring_length = 10.0
mode = "TopView"
target_path = NodePath("../Drakkar")
top_view_target_offset = Vector3(-6, 4, 5)
top_view_view_offset = Vector3(-6.5, 3.5, -5)

[node name="DayNightCycle" parent="." node_paths=PackedStringArray("environment") instance=ExtResource("2_nmtd3")]
environment = NodePath("../WorldEnvironment")
start_time = 0.8
running = false
time = 0.8

[node name="WeatherControl" parent="." node_paths=PackedStringArray("environement", "daynight_cycle") instance=ExtResource("7_e27xs")]
environement = NodePath("../WorldEnvironment")
daynight_cycle = NodePath("../DayNightCycle")
rain_effect = ExtResource("8_f874g")
snow_effect = ExtResource("9_bem8h")
enabled = false
temperature_index = 1.0
weather_index = 0.4

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource("9_lxvdx")

[node name="Cutscene" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_nvqa1")
}

[node name="Rock" type="Node3D" parent="Cutscene"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 92)

[node name="large_rock" parent="Cutscene/Rock" instance=ExtResource("12_7jti2")]
transform = Transform3D(0.196558, 3.93474, -0.301375, -0.140348, -0.576773, -1.97412, -1.98536, 0.430325, 0.109716, 0, 0, 0)

[node name="Thunder" type="AudioStreamPlayer" parent="Cutscene"]
stream = ExtResource("12_sq8o2")

[node name="DrakkarDamage" type="AudioStreamPlayer" parent="Cutscene"]
stream = ExtResource("14_ivgsl")

[node name="GUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -313.0
grow_horizontal = 0
grow_vertical = 2
theme = ExtResource("12_mvb4d")

[node name="Panel" type="Panel" parent="GUI"]
modulate = Color(0, 0, 0, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="GUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="Label" type="Label" parent="GUI/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "Viking Survivor"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Play" type="Button" parent="GUI/MarginContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../Options")
text = "JOUER"

[node name="Options" type="Button" parent="GUI/MarginContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Play")
focus_neighbor_bottom = NodePath("../Quit")
text = "OPTIONS"

[node name="Quit" type="Button" parent="GUI/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "QUITTER"

[node name="MusicLoader" type="Node" parent="."]
script = ExtResource("16_ivh46")
music = ExtResource("17_h5cha")

[node name="OptionsWindow" parent="." instance=ExtResource("18_x708y")]
visible = false
always_on_top = true

[connection signal="damaged" from="ActorCharacterPlayer" to="." method="_on_actor_character_player_damaged"]
[connection signal="pressed" from="GUI/MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="GUI/MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="GUI/MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="close_requested" from="OptionsWindow" to="." method="_on_options_window_close_requested"]

[editable path="DayNightCycle"]
